--- a/composer.json
+++ b/composer.json
@@ -1,5 +1,7 @@
 {
   "require": {
+    "mediawiki/oauthclient": "~0.1",
+    "wikimedia/slimapp": "dev-master"
   },
   "autoload": {
     "psr-4": {
