--- a/composer.json
+++ b/composer.json
@@ -6,6 +6,21 @@
   "autoload": {
     "psr-4": {
       "Plagiabot\\Web\\": "src/"
+    },
+    "require-dev": {
+      "jakub-onderka/php-parallel-lint": "0.9.*",
+      "mediawiki/mediawiki-codesniffer": "0.5.1",
+      "phpunit/phpunit": "~4.8"
+    },
+    "scripts": {
+      "lint": "parallel-lint . --exclude vendor",
+      "phpcs": "phpcs $PHPCS_ARGS",
+      "fix": "phpcbf",
+      "test": [
+        "composer lint",
+        "phpunit $PHPUNIT_ARGS",
+        "composer phpcs"
+      ]
     }
   }
 }
