--- a/.travis.yml
+++ b/.travis.yml
@@ -4,3 +4,12 @@ php:
   - '5.5'
   - '5.6'
   - '7.0'
+  - 'hhvm'
+matrix:
+  allow_failures:
+    - php: 'hhvm' # https://github.com/facebook/hhvm/issues/5836
+sudo: false
+install:
+  - composer install
+script:
+  - composer test
