Try to fix builds;Enable database writing with oauth

--- a/phpunit.xml.dist
+++ b/phpunit.xml.dist
@@ -6,8 +6,13 @@
          beStrictAboutTestsThatDoNotTestAnything="true"
          beStrictAboutOutputDuringTests="true"
          verbose="true">
+    <testsuites>
+        <testsuite name="Copypatrol">
+            <directory>./tests</directory>
+        </testsuite>
+    </testsuites>
     <filter>
-        <whitelist addUncoveredFilesFromWhitelist="true">
+        <whitelist>
             <directory suffix=".php">./src</directory>
         </whitelist>
     </filter>
