--- a/composer.json
+++ b/composer.json
@@ -7,9 +7,6 @@
     "psr-4": {
       "Plagiabot\\Web\\": "src/"
     },
-    "require-dev": {
-      "phpunit/phpunit": "~4.8"
-    },
     "scripts": {
       "phpcs": "phpcs $PHPCS_ARGS",
       "fix": "phpcbf",
@@ -20,6 +17,7 @@
   },
   "require-dev": {
     "jakub-onderka/php-parallel-lint": "^0.9.2",
-    "mediawiki/mediawiki-codesniffer": "^0.7.2"
+    "mediawiki/mediawiki-codesniffer": "^0.7.2",
+    "phpunit/phpunit": "~4.8"
   }
 }
