update gitignore to be Tool Labs friendly

--- a/.gitignore
+++ b/.gitignore
@@ -1,8 +1,22 @@
 .DS_Store
-vendor/*
-.idea/*
-replica.my.cnf
-.env
 .lighttpd.conf
+.viminfo
+.my.cnf
+.env
+.*_history
+.bash*
+*.log
+tmp/
+vendor/
 src/Less/cache/*
+fill_patroller/
+flask-mwoauth/
+.composer/
+.npm/
+.idea/
+.local/
+.subversion/
+replica.my.cnf
+service.manifest
+restart_webservice.sh
 !.gitkeep
