--- a/composer.json
+++ b/composer.json
@@ -1,4 +1,5 @@
 {
+  "license": "GPL-3.0+",
   "require": {
     "oyejorge/less.php": "~1.5",
     "mediawiki/oauthclient": "~0.1",
@@ -7,18 +8,19 @@
   "autoload": {
     "psr-4": {
       "Plagiabot\\Web\\": "src/"
-    },
-    "scripts": {
-      "phpcs": "phpcs $PHPCS_ARGS",
-      "fix": "phpcbf",
-      "test": [
-        "composer phpcs"
-      ]
     }
   },
   "require-dev": {
     "jakub-onderka/php-parallel-lint": "^0.9.2",
     "mediawiki/mediawiki-codesniffer": "^0.7.2",
     "phpunit/phpunit": "~4.8"
+  },
+  "scripts": {
+      "fix": "phpcbf",
+      "test": [
+        "parallel-lint . --exclude vendor",
+        "phpunit",
+        "phpcs -p"
+      ]
   }
 }
