--- a/.travis.yml
+++ b/.travis.yml
@@ -1,17 +1,12 @@
 language: php
 php:
-  - '5.4'
   - '5.5'
   - '5.6'
   - '7.0'
   - 'hhvm'
-matrix:
-  allow_failures:
-    - php: 'hhvm' # https://github.com/facebook/hhvm/issues/5836
-    - php: '5.4' # Does not support latest codesniffer release
 sudo: false
-install:
-  - composer install
-script:
-  - phpunit
-  - vendor/bin/parallel-lint --exclude vendor .
+env:
+  global:
+    - COMPOSER_DISABLE_XDEBUG_WARN=1
+install: composer install
+script: composer test
