--- a/composer.json
+++ b/composer.json
@@ -18,6 +18,7 @@
   "scripts": {
       "fix": "phpcbf",
       "test": [
+        "composer fix",
         "parallel-lint . --exclude vendor",
         "phpunit",
         "phpcs -p"
