--- a/.travis.yml
+++ b/.travis.yml
@@ -9,6 +9,4 @@ env:
   global:
     - COMPOSER_DISABLE_XDEBUG_WARN=1
 install: composer install
-script:
-  - composer fix
-  - composer test
+script: composer test
