Avoid running phpunit tests as part of travis build

--- a/composer.json
+++ b/composer.json
@@ -20,7 +20,7 @@
     "fix": "phpcbf",
     "test": [
       "parallel-lint . --exclude vendor",
-      "phpunit",
+      // "phpunit",
       "phpcs -p"
     ]
   }
