--- a/composer.json
+++ b/composer.json
@@ -4,7 +4,8 @@
     "oyejorge/less.php": "~1.5",
     "mediawiki/oauthclient": "~0.1",
     "wikimedia/slimapp": "dev-master",
-    "addwiki/mediawiki-api-base": "~2.1"
+    "addwiki/mediawiki-api-base": "~2.1",
+    "wikimedia/simplei18n": "~1.0"
   },
   "autoload": {
     "psr-4": {
