--- a/composer.json
+++ b/composer.json
@@ -1,11 +1,14 @@
 {
   "license": "GPL-3.0+",
   "require": {
+    "ext-intl": "*",
+    "ext-redis": "*",
     "oyejorge/less.php": "~1.5",
     "mediawiki/oauthclient": "~0.1",
     "wikimedia/slimapp": "dev-master",
     "addwiki/mediawiki-api-base": "~2.1",
-    "wikimedia/simplei18n": "~1.0"
+    "wikimedia/simplei18n": "~1.0",
+    "tedivm/stash": "^0.14.1"
   },
   "autoload": {
     "psr-4": {
@@ -22,6 +25,14 @@
     "test": [
       "parallel-lint . --exclude vendor",
       "phpcs -p"
+    ]
+  },
+  "script": {
+    "post-install-cmd": [
+      "php -r \"file_exists('.env') || copy('.env_example', '.env');\""
+    ],
+    "post-update-cmd": [
+      "php -r \"file_exists('.env') || copy('.env_example', '.env');\""
     ]
   }
 }
