No local DB, composer.lock added, and cache info updated
Remove the notes about having a local database, add the cache
directory (but not its contents), and add the composer.lock
file so that everyone gets the same dependencies.

--- a/.env_example
+++ b/.env_example
@@ -6,9 +6,8 @@ OAUTH_REDIR          = 'https://meta.org/wiki/Special:OAuth/authenticate?'
 OAUTH_CALLBACK       = 'https://tools.wmflabs.org/copypatrol/oauth/callback'
 
 ; Database connection details. The same username and password is used for all three data sources.
-DB_DSN_PLAGIABOT   = "mysql:host=localhost;dbname=copypatrol_dev"
-DB_DSN_WIKIPROJECT =
 DB_DSN_ENWIKI      = "mysql:host=127.0.0.1;port=4711;dbname=enwiki_p"
+DB_DSN_PLAGIABOT   = "mysql:host=127.0.0.1;port=4711;dbname=s51306__copyright_p"
 DB_USER            =
 DB_PASS            =
 
