--- a/.gitignore
+++ b/.gitignore
@@ -9,7 +9,7 @@
 *.log
 tmp/
 /vendor/
-/cache/
+/cache/*
 src/Less/cache/*
 fill_patroller/
 flask-mwoauth/
@@ -23,5 +23,4 @@ replica.my.cnf
 service.manifest
 restart_webservice.sh
 deploy.sh
-composer.lock
 !.gitkeep
