--- a/.env_example
+++ b/.env_example
@@ -5,7 +5,7 @@ OAUTH_ENDPOINT       = 'https://meta.wikimedia.org/w/index.php?title=Special:OAu
 OAUTH_REDIR          = 'https://meta.org/wiki/Special:OAuth/authenticate?'
 OAUTH_CALLBACK       = 'https://tools.wmflabs.org/copypatrol/oauth/callback'
 
-; Database connection details. The same username and password is used for all three data sources.
+; Database connection details. The same username and password is used for both data sources.
 DB_DSN_ENWIKI      = "mysql:host=127.0.0.1;port=4711;dbname=enwiki_p"
 DB_DSN_PLAGIABOT   = "mysql:host=127.0.0.1;port=4711;dbname=s51306__copyright_p"
 DB_USER            =
