Some work on i18n. WiP.

--- a/.env_example
+++ b/.env_example
@@ -5,11 +5,12 @@ OAUTH_ENDPOINT       = 'https://meta.wikimedia.org/w/index.php?title=Special:OAu
 OAUTH_REDIR          = 'https://meta.org/wiki/Special:OAuth/authenticate?'
 OAUTH_CALLBACK       = 'https://tools.wmflabs.org/copypatrol/oauth/callback'
 
-; Database connection details. The same username and password is used for both data sources.
-DB_DSN_ENWIKI      = "mysql:host=127.0.0.1;port=4711;dbname=enwiki_p"
-DB_DSN_PLAGIABOT   = "mysql:host=127.0.0.1;port=4711;dbname=s51306__copyright_p"
+; Database connection details.
+DB_HOST            = 127.0.0.1
+DB_PORT            = 1477
 DB_USER            =
 DB_PASS            =
+DB_NAME_COPYPATROL = s51306__copyright_p
 
 ; Caching system. If a Redis host is not defined, a local Filesystem cache will be used instead.
 REDIS_HOST = "tools-redis"
