Oauth redirect locations

--- a/.env_example
+++ b/.env_example
@@ -2,8 +2,8 @@
 OAUTH_CONSUMER_TOKEN =
 OAUTH_SECRET_TOKEN   =
 OAUTH_ENDPOINT       = 'https://meta.wikimedia.org/w/index.php?title=Special:OAuth'
-OAUTH_REDIR          = 'https://meta.org/wiki/Special:OAuth/authenticate?'
-OAUTH_CALLBACK       = 'https://tools.wmflabs.org/copypatrol/oauth/callback'
+OAUTH_REDIR          = 'https://meta.wikimedia.org/wiki/Special:OAuth/authenticate?'
+OAUTH_CALLBACK       = 'oob'
 
 ; Database connection details.
 DB_HOST            = 127.0.0.1
@@ -15,3 +15,7 @@ DB_NAME_COPYPATROL = s51306__copyright_p
 ; Caching system. If a Redis host is not defined, a local Filesystem cache will be used instead.
 REDIS_HOST = "tools-redis"
 REDIS_PORT = 6379
+
+; Debugging.
+;LOG_LEVEL = debug
+;LOG_FILE = /full/path/to/copypatrol.log
