Fix errors in example Oauth environment variables

--- a/.env_example
+++ b/.env_example
@@ -2,8 +2,8 @@
 OAUTH_CONSUMER_TOKEN =
 OAUTH_SECRET_TOKEN   =
 OAUTH_ENDPOINT       = 'https://meta.wikimedia.org/w/index.php?title=Special:OAuth'
-OAUTH_REDIR          = 'https://meta.org/wiki/Special:OAuth/authenticate?'
-OAUTH_CALLBACK       = 'https://tools.wmflabs.org/copypatrol/oauth/callback'
+OAUTH_REDIR          = 'https://meta.wikimedia.org/wiki/Special:OAuth/authenticate?'
+OAUTH_CALLBACK       = 'oob'
 
 ; Database connection details. The same username and password is used for both data sources.
 DB_DSN_ENWIKI      = "mysql:host=127.0.0.1;port=4711;dbname=enwiki_p"
