--- a/.env_example
+++ b/.env_example
@@ -5,12 +5,18 @@ OAUTH_ENDPOINT       = 'https://meta.wikimedia.org/w/index.php?title=Special:OAu
 OAUTH_REDIR          = 'https://meta.wikimedia.org/wiki/Special:OAuth/authenticate?'
 OAUTH_CALLBACK       = 'oob'
 
-; Database connection details.
+; Credentials for private EranBot database.
 DB_HOST            = 127.0.0.1
-DB_PORT            = 1477
+DB_PORT            = 4711
 DB_USER            =
 DB_PASS            =
 DB_NAME_COPYPATROL = s51306__copyright_p
+
+; Credentials for replicas.
+DB_REPLICA_HOST    = 127.0.0.1
+DB_REPLICA_PORT    = 4712
+DB_REPLICA_USER    =
+DB_REPLICA_PASS    =
 
 ; Caching system. If a Redis host is not defined, a local Filesystem cache will be used instead.
 REDIS_HOST = "tools-redis"
