Remove trailing slash middleware
Apparently this isn't needed anymore, and it's actually breaking the
'home' route from redirecting to the page with the language code (e.g.
if your browser is set to English, it should redirect to /en)

Also add ext-json requirement to composer.json

--- a/composer.json
+++ b/composer.json
@@ -2,6 +2,7 @@
   "license": "GPL-3.0-or-later",
   "require": {
     "php": "^7.2",
+    "ext-json": "*",
     "oyejorge/less.php": "~1.5",
     "mediawiki/oauthclient": "~1.0",
     "wikimedia/slimapp": "dev-master",
