WikiDao: update to use new replicas
Bug: T270407

--- a/.env_example
+++ b/.env_example
@@ -13,6 +13,7 @@ DB_PASS            =
 DB_NAME_COPYPATROL = s51306__copyright_p
 
 ; Credentials for replicas.
+; On Toolforge, DB_REPLICA_HOST should be '*.web.db.svc.eqiad.wmflabs'
 DB_REPLICA_HOST    = 127.0.0.1
 DB_REPLICA_PORT    = 4712
 DB_REPLICA_USER    =
