Migrate earnbot's ithenticate script to CopyPatrol
This means we no longer rely on an outside webserver to fetch document
IDs from Ithenticate.

Bug: T309816

--- a/.env_example
+++ b/.env_example
@@ -23,6 +23,9 @@ DB_REPLICA_PASS    =
 REDIS_HOST = "tools-redis"
 REDIS_PORT = 6379
 
+ITHENTICATE_USER = alice@example.org
+ITHENTICATE_PASS =
+
 ; Debugging.
 ;LOG_LEVEL = debug
 ;LOG_FILE = /full/path/to/copypatrol.log
