--- a/composer.json
+++ b/composer.json
@@ -8,7 +8,8 @@
     "wikimedia/slimapp": "dev-master",
     "addwiki/mediawiki-api-base": "~2.1",
     "wikimedia/simplei18n": "~1.0",
-    "tedivm/stash": "^0.17"
+    "tedivm/stash": "^0.17",
+    "phpxmlrpc/phpxmlrpc": "^4"
   },
   "autoload": {
     "psr-4": {
