--- a/composer.json
+++ b/composer.json
@@ -1,4 +1,6 @@
 {
+  "name": "CopyPatrol",
+  "description": "The web interface for Plagiabot",
   "license": "GPL-3.0-or-later",
   "require": {
     "php": "^7.2",
