--- a/composer.json
+++ b/composer.json
@@ -1,15 +1,16 @@
 {
   "license": "GPL-3.0-or-later",
   "require": {
-    "php": "^7.2",
+    "php": "^7.4",
     "ext-json": "*",
-    "oyejorge/less.php": "~1.5",
+    "ext-intl": "*",
     "mediawiki/oauthclient": "~1.0",
     "wikimedia/slimapp": "dev-master",
     "addwiki/mediawiki-api-base": "~2.1",
     "wikimedia/simplei18n": "~1.0",
     "tedivm/stash": "^0.17",
-    "phpxmlrpc/phpxmlrpc": "^4"
+    "phpxmlrpc/phpxmlrpc": "^4",
+    "wikimedia/less.php": "^4.0"
   },
   "autoload": {
     "psr-4": {
@@ -17,9 +18,9 @@
     }
   },
   "require-dev": {
-    "jakub-onderka/php-parallel-lint": "^1.0.0",
     "mediawiki/mediawiki-codesniffer": "^28.0.0",
-    "phpunit/phpunit": "~8.3"
+    "phpunit/phpunit": "~8.3",
+    "php-parallel-lint/php-parallel-lint": "^1.3"
   },
   "scripts": {
     "fix": "phpcbf",
