--- a/composer.json
+++ b/composer.json
@@ -7,6 +7,7 @@
         "php": ">=7.4",
         "ext-ctype": "*",
         "ext-iconv": "*",
+        "ext-json": "*",
         "doctrine/annotations": "^2.0",
         "doctrine/doctrine-bundle": "^2.2",
         "phpxmlrpc/phpxmlrpc": "^4.10",
