Show edit size, summary, and tags for each edit
Also cache the WikiRepository::draftsExist() query, which takes >100ms

Update composer packages

--- a/composer.json
+++ b/composer.json
@@ -8,6 +8,7 @@
         "ext-ctype": "*",
         "ext-iconv": "*",
         "ext-json": "*",
+        "ext-intl": "*",
         "doctrine/annotations": "^2.0",
         "doctrine/doctrine-bundle": "^2.2",
         "phpxmlrpc/phpxmlrpc": "^4.10",
