Remove damage scores
These are very slow to fetch and our users have informed us they don't
really use the scores anyway. See https://w.wiki/7tWk

--- a/composer.json
+++ b/composer.json
@@ -9,6 +9,7 @@
         "ext-iconv": "*",
         "ext-json": "*",
         "ext-intl": "*",
+        "ext-apcu": "*",
         "doctrine/annotations": "^2.0",
         "doctrine/doctrine-bundle": "^2.2",
         "phpxmlrpc/phpxmlrpc": "^4.10",
