Update to connect to Trove instead of ToolsDB
This means we need to temporarily pull from a dev branch of
ToolforgeBundle, until the relevant PR is merged.

Update README since the Docker instructions will no longer work,
and add instructions about building assets.

Also update .editorconfig to use tabs in JSON files

--- a/.editorconfig
+++ b/.editorconfig
@@ -7,6 +7,6 @@ insert_final_newline = true
 trim_trailing_whitespace = true
 
 # tab indentation
-[*.{php,js,less,twig}]
+[*.{php,js,less,twig,json}]
 indent_style = tab
 indent_size = 4
