--- a/.env
+++ b/.env
@@ -28,6 +28,10 @@ TOOLSDB_HOST=127.0.0.1
 TOOLSDB_PORT=4720
 TOOLSDB_USERNAME=
 TOOLSDB_PASSWORD=
+TROVE_HOST=127.0.0.1
+TROVE_PORT=4721
+TROVE_USERNAME=
+TROVE_PASSWORD=
 COPYPATROL_DB_NAME=s52615__copypatrol_migrate_test_02_p
 
 # OAuth credentials
