--- a/composer.json
+++ b/composer.json
@@ -1,91 +1,96 @@
 {
-    "name": "wikimedia/copypatrol",
-    "type": "project",
-    "description": "A tool that allows you to see recent Wikipedia edits that are flagged as possible copyright violations",
-    "license": "GPL-3.0-or-later",
-    "require": {
-        "php": ">=7.4",
-        "ext-ctype": "*",
-        "ext-iconv": "*",
-        "ext-json": "*",
-        "ext-intl": "*",
-        "ext-apcu": "*",
-        "doctrine/annotations": "^2.0",
-        "doctrine/doctrine-bundle": "^2.2",
-        "phpxmlrpc/phpxmlrpc": "^4.10",
-        "symfony/dotenv": "^5.4",
-        "symfony/expression-language": "^5.4",
-        "symfony/flex": "^1.3.1",
-        "symfony/framework-bundle": "^5.4",
-        "symfony/monolog-bundle": "^3.7",
-        "symfony/twig-bundle": "^5.4",
-        "symfony/webpack-encore-bundle": "^1.16",
-        "symfony/yaml": "^5.4",
-        "wikimedia/toolforge-bundle": "^1.5"
-    },
-    "require-dev": {
-        "mediawiki/mediawiki-codesniffer": "^38.0",
-        "mediawiki/minus-x": "^1.0",
-        "phpunit/phpunit": "^9.5",
-        "symfony/browser-kit": "5.4.*",
-        "symfony/css-selector": "5.4.*",
-        "symfony/maker-bundle": "^1.25",
-        "symfony/phpunit-bridge": "^5.4",
-        "symfony/web-profiler-bundle": "^5.4"
-    },
-    "config": {
-        "platform": {
-            "php": "7.4"
-        },
-        "optimize-autoloader": true,
-        "preferred-install": {
-            "*": "dist"
-        },
-        "sort-packages": true,
-        "allow-plugins": {
-            "symfony/flex": true
-        }
-    },
-    "autoload": {
-        "psr-4": {
-            "App\\": "src/"
-        }
-    },
-    "autoload-dev": {
-        "psr-4": {
-            "App\\Tests\\": "tests/"
-        }
-    },
-    "scripts": {
-        "auto-scripts": {
-            "cache:clear": "symfony-cmd",
-            "assets:install %PUBLIC_DIR%": "symfony-cmd"
-        },
-        "post-install-cmd": [
-            "@auto-scripts"
-        ],
-        "post-update-cmd": [
-            "@auto-scripts"
-        ],
-        "test": [
-            "composer validate",
-            "phpcs -s .",
-            "./bin/console lint:twig ./templates",
-            "./bin/console lint:yaml ./config",
-            "minus-x check .",
-            "./bin/phpunit"
-        ],
-        "fix": [
-            "phpcbf"
-        ]
-    },
-    "conflict": {
-        "symfony/symfony": "*"
-    },
-    "extra": {
-        "symfony": {
-            "allow-contrib": false,
-            "require": "5.4.*"
-        }
-    }
+	"name": "wikimedia/copypatrol",
+	"type": "project",
+	"description": "A tool that allows you to see recent Wikipedia edits that are flagged as possible copyright violations",
+	"license": "GPL-3.0-or-later",
+	"repositories": [
+		{
+			"type": "git",
+			"url": "https://github.com/wikimedia/ToolforgeBundle"
+		}
+	],
+	"require": {
+		"php": ">=7.4",
+		"ext-ctype": "*",
+		"ext-iconv": "*",
+		"ext-json": "*",
+		"ext-intl": "*",
+		"ext-apcu": "*",
+		"doctrine/annotations": "^2.0",
+		"doctrine/doctrine-bundle": "^2.2",
+		"phpxmlrpc/phpxmlrpc": "^4.10",
+		"symfony/dotenv": "^5.4",
+		"symfony/expression-language": "^5.4",
+		"symfony/flex": "^1.3.1",
+		"symfony/framework-bundle": "^5.4",
+		"symfony/monolog-bundle": "^3.7",
+		"symfony/twig-bundle": "^5.4",
+		"symfony/webpack-encore-bundle": "^1.16",
+		"symfony/yaml": "^5.4",
+		"wikimedia/toolforge-bundle": "dev-trove"
+	},
+	"require-dev": {
+		"mediawiki/mediawiki-codesniffer": "^38.0",
+		"mediawiki/minus-x": "^1.0",
+		"phpunit/phpunit": "^9.5",
+		"symfony/browser-kit": "5.4.*",
+		"symfony/css-selector": "5.4.*",
+		"symfony/maker-bundle": "^1.25",
+		"symfony/phpunit-bridge": "^5.4",
+		"symfony/web-profiler-bundle": "^5.4"
+	},
+	"config": {
+		"platform": {
+			"php": "7.4"
+		},
+		"optimize-autoloader": true,
+		"preferred-install": {
+			"*": "dist"
+		},
+		"sort-packages": true,
+		"allow-plugins": {
+			"symfony/flex": true
+		}
+	},
+	"autoload": {
+		"psr-4": {
+			"App\\": "src/"
+		}
+	},
+	"autoload-dev": {
+		"psr-4": {
+			"App\\Tests\\": "tests/"
+		}
+	},
+	"scripts": {
+		"auto-scripts": {
+			"cache:clear": "symfony-cmd"
+		},
+		"post-install-cmd": [
+			"@auto-scripts"
+		],
+		"post-update-cmd": [
+			"@auto-scripts"
+		],
+		"test": [
+			"composer validate",
+			"phpcs -s .",
+			"./bin/console lint:twig ./templates",
+			"./bin/console lint:yaml ./config",
+			"minus-x check .",
+			"./bin/phpunit"
+		],
+		"fix": [
+			"phpcbf"
+		]
+	},
+	"conflict": {
+		"symfony/symfony": "*"
+	},
+	"extra": {
+		"symfony": {
+			"allow-contrib": false,
+			"require": "5.4.*"
+		}
+	}
 }
