Add API for the feed and submission IDs
Adds three public CORS-enabled endpoints:
* /api.json - OpenAPI specification
* /api/feed/{lang} - feed for a given language
* /api/case/{submissionId} - info on a specific case

Interactive docs browsable at /api

Bug: T354324

--- a/.env.test
+++ b/.env.test
@@ -26,11 +26,11 @@ REPLICAS_PORT_S7=4717
 REPLICAS_PORT_S8=4718
 
 # Credentials for CopyPatrol database
-TOOLSDB_HOST=127.0.0.1
-TOOLSDB_PORT=4720
-TOOLSDB_USERNAME=
-TOOLSDB_PASSWORD=
-COPYPATROL_DB_NAME=s52615__copypatrol_migrate_test_02_p
+TROVE_HOST=127.0.0.1
+TROVE_PORT=4721
+TROVE_USERNAME=
+TROVE_PASSWORD=
+COPYPATROL_DB_NAME=
 
 APP_ENABLED_LANGS=ar,en,es,fr,simple
 APP_NOTICE_TEXT=
