--- a/composer.json
+++ b/composer.json
@@ -11,20 +11,23 @@
 	],
 	"require": {
 		"php": ">=7.4",
+		"ext-apcu": "*",
 		"ext-ctype": "*",
 		"ext-iconv": "*",
-		"ext-json": "*",
 		"ext-intl": "*",
-		"ext-apcu": "*",
+		"ext-json": "*",
 		"doctrine/annotations": "^2.0",
 		"doctrine/doctrine-bundle": "^2.2",
+		"nelmio/api-doc-bundle": "^4.20",
+		"nelmio/cors-bundle": "^2.4",
 		"phpxmlrpc/phpxmlrpc": "^4.10",
+		"symfony/asset": "5.4.*",
 		"symfony/dotenv": "^5.4",
 		"symfony/expression-language": "^5.4",
 		"symfony/flex": "^1.3.1",
 		"symfony/framework-bundle": "^5.4",
 		"symfony/monolog-bundle": "^3.7",
-		"symfony/twig-bundle": "^5.4",
+		"symfony/twig-bundle": "5.4.*",
 		"symfony/webpack-encore-bundle": "^1.16",
 		"symfony/yaml": "^5.4",
 		"wikimedia/toolforge-bundle": "dev-trove"
