--- a/composer.json
+++ b/composer.json
@@ -27,6 +27,8 @@
 		"symfony/flex": "^1.3.1",
 		"symfony/framework-bundle": "^5.4",
 		"symfony/monolog-bundle": "^3.7",
+		"symfony/property-access": "5.4.*",
+		"symfony/serializer": "5.4.*",
 		"symfony/twig-bundle": "5.4.*",
 		"symfony/webpack-encore-bundle": "^1.16",
 		"symfony/yaml": "^5.4",
