Update to PHP 8.1+, Node 18.17.0, and add fixes for VPS
Bug: T333724

--- a/.env
+++ b/.env
@@ -32,18 +32,23 @@ TROVE_HOST=127.0.0.1
 TROVE_PORT=4721
 TROVE_USERNAME=
 TROVE_PASSWORD=
-COPYPATROL_DB_NAME=s52615__copypatrol_migrate_test_02_p
+COPYPATROL_DB_NAME=copypatrol_migrate_test_02
 
 # OAuth credentials
 OAUTH_URL='https://meta.wikimedia.org/w/index.php?title=Special:OAuth'
 OAUTH_KEY=
 OAUTH_SECRET=
 
-# iThenticate credentials
+# TCA credentials (for new reports)
+TCA_DOMAIN=wikimedia.tii-sandbox.com
+TCA_KEY=
+
+# iThenticate credentials (for reports older than AppController::ITHENTICATE_V2_TIMESTAMP)
 ITHENTICATE_USERNAME=
 ITHENTICATE_PASSWORD=
 
 # App configuration
+APP_VERSION=
 APP_ENABLED_LANGS=ar,en,es,fr,simple
 APP_NOTICE_TEXT=
 APP_NOTICE_STYLE=
