--- a/composer.json
+++ b/composer.json
@@ -3,14 +3,8 @@
 	"type": "project",
 	"description": "A tool that allows you to see recent Wikipedia edits that are flagged as possible copyright violations",
 	"license": "GPL-3.0-or-later",
-	"repositories": [
-		{
-			"type": "git",
-			"url": "https://github.com/wikimedia/ToolforgeBundle"
-		}
-	],
 	"require": {
-		"php": ">=7.4",
+		"php": ">=8.1",
 		"ext-apcu": "*",
 		"ext-ctype": "*",
 		"ext-iconv": "*",
@@ -32,7 +26,7 @@
 		"symfony/twig-bundle": "5.4.*",
 		"symfony/webpack-encore-bundle": "^1.16",
 		"symfony/yaml": "^5.4",
-		"wikimedia/toolforge-bundle": "dev-trove"
+		"wikimedia/toolforge-bundle": "^1.6.1"
 	},
 	"require-dev": {
 		"mediawiki/mediawiki-codesniffer": "^38.0",
@@ -46,7 +40,7 @@
 	},
 	"config": {
 		"platform": {
-			"php": "7.4"
+			"php": "8.2"
 		},
 		"optimize-autoloader": true,
 		"preferred-install": {
