--- a/package.json
+++ b/package.json
@@ -7,8 +7,9 @@
   },
   "devDependencies": {
     "@symfony/webpack-encore": "^4.0.0",
-    "eslint": "8.44.0",
-    "eslint-config-wikimedia": "^0.25.1",
+    "eslint": "^8.56.0",
+    "eslint-config-wikimedia": "^0.27.0",
+    "eslint-plugin-unicorn": "^52.0.0",
     "file-loader": "^6.2.0",
     "less": "^4.1.3",
     "less-loader": "^11.1.0",
