--- a/config/packages/framework.yaml
+++ b/config/packages/framework.yaml
@@ -7,11 +7,10 @@ framework:
     # Enables session support. Note that the session will ONLY be started if you read or write from it.
     # Remove or comment this section to explicitly disable session support.
     session:
-        handler_id: session.handler.native_file
-        cookie_secure: auto
-        cookie_samesite: lax
+        storage_id: Wikimedia\ToolforgeBundle\Service\NativeSessionStorage
+        handler_id: 'session.handler.native_file'
         save_path: '%kernel.project_dir%/var/sessions/%kernel.environment%'
-        storage_factory_id: session.storage.factory.native
+        cookie_lifetime: 604800 # one week
 
     #esi: true
     #fragments: true
