--- a/.env
+++ b/.env
@@ -29,6 +29,7 @@ TOOLSDB_PORT=4720
 TOOLSDB_USERNAME=
 TOOLSDB_PASSWORD=
 TROVE_HOST=127.0.0.1
+TROVE_REMOTE_HOST=hxmnwriu2vm.svc.trove.eqiad1.wikimedia.cloud
 TROVE_PORT=4721
 TROVE_USERNAME=
 TROVE_PASSWORD=
