--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -1,5 +1,3 @@
-version: '3.8'
-
 # =========================================================
 #
 # This file allows anyone to start the CopyPatrol web interface
@@ -26,12 +24,17 @@ services:
         command: serve
         stdin_open: true
         tty: true
+        environment:
+            - TROVE_REMOTE_HOST
         extra_hosts:
             - host.docker.internal:host-gateway
         ports:
             - "8000:8000"
         volumes:
             # This binds your SSH configuration into the container.
+            # If you don't want to do this, comment this entry out.
+            # TODO: Disable `copypatrol` user access to /ssh, when that becomes possible.
+            # https://github.com/docker/roadmap/issues/398
             -   type: bind
                 source: "$HOME/.ssh"
                 target: "/ssh"
@@ -40,4 +43,8 @@ services:
             -   type: bind
                 source: "."
                 target: "/app"
+                read_only: true
+            -   type: bind
+                source: "./var"
+                target: "/app/var"
         stop_signal: SIGINT
